<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".CardEncryptionActivity">

  <ScrollView
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="16dp"
      android:paddingTop="16dp"
      android:paddingRight="16dp"
      tools:ignore="MissingConstraints">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:id="@+id/visa"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/visa"
          android:textSize="30sp"
          android:textStyle="bold" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/visaFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/visaFieldTitle" />

          <EditText
            android:id="@+id/visaCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@string/visaCardNumber" />
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/uidTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uid" />

          <EditText
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text" />
        </LinearLayout>

        <Button
          android:id="@+id/visaButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/visaEncryption" />

      </LinearLayout>

      <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="32dp" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:id="@+id/mastercard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/mastercard"
          android:textSize="30sp"
          android:textStyle="bold" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/mastercardFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mastercardFieldTitle" />

          <EditText
            android:id="@+id/mastercardCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@string/mastercardCardNumber" />
        </LinearLayout>

        <Button
          android:id="@+id/mastercardButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/mastercardEncryption" />
      </LinearLayout>

      <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="32dp" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:id="@+id/amex"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/amex"
          android:textSize="30sp"
          android:textStyle="bold" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/amexFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amexFieldTitle" />

          <EditText
            android:id="@+id/amexCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@string/amexCardNumber" />
        </LinearLayout>

        <Button
          android:id="@+id/amexButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/amexEncryption" />
      </LinearLayout>

      <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

      <TextView
        android:id="@+id/encryptedNumberTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encryptedNumberTitle" />

      <EditText
        android:id="@+id/encryptedNumber"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="none" />
    </LinearLayout>

  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
